todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.15.0) unreleased/unreleased (4.2/4.3); urgency=medium

* [fix] osbatchgui: batchgui via timer nach vorne schieben, configurierbar ?
          (#47, , d.oertel 2024-04-30)
          call FBatchOberflaeche.SetForceStayOnTop with false before and with true after running a process
          SetForceStayOnTop will also switch the TimerOnTop on / off


-- j.werner <j.werner@uib.de> 07 June 2024


opsi-script (4.12.14.1) unreleased/stable (4.2/4.3); urgency=medium

* [fix]  readConfigsFromService in /ServiceBatch: fix for opsi-script running in the context of opsi-template-with-userlogin
        (fqdn/clientdid was empty) (j.werner, !222)

-- j.werner <j.werner@uib.de> 24 April 2024

opsi-script (4.12.14.0) unreleased/stable (4.2/4.3); urgency=medium

* [update] opsiservicecall now specifies its own user agent: ProductID + ' (opsiservicecall:<typeofcall>)' (j.werner, !214)
* [update] set UTF8 filename encoding for getFileListFromZip (m.michaelis, !211)
* [update] readConfigsFromService in /ServiceBatch (m.michaelis, !218)

-- j.werner <j.werner@uib.de> 1 Mar 2024


opsi-script (4.12.13.0) unreleased/stable (4.2/4.3); urgency=medium

 * [change] osmain.pas: update the prodcut status/progress (ProductOnClient_updateObject) for action requests uninstall and always (j.werner, !199, 68c13bd5a6dac3e28becf21d4d148192fe677914)
 * [change] osparser.pas: isFatalError: additional log the error message in the logfile (j.werner, 8efada26b0380c2e4c382ce711a80dd94be5132a)
 * [update] opsi-script logging at startup now contains compile date information (j.werner, !200)
 * [change] GetDefaultLang was depricated and is replaced by SetDefaultLang('') (d.oertel, j.werner, !201, 3daab47afb6470fccd89895255e3c28b32ed7fa5)